--- a/browser_sdk/style.css
+++ b/browser_sdk/style.css
@@ -23,23 +23,35 @@ body{
     border-radius: 11px;
     border: 0;
     box-shadow: 3px 3px 5px #00000070;
-    background-color: #abaaaa;
+    background: rgb(195, 195, 195);
     transition: background-color 0.4s;
+}
+.action_btns button{
+    background: rgb(143,143,143);
+    background: linear-gradient(0deg, rgba(143,143,143,1) 0%, rgba(201,201,201,1) 100%);
+    text-shadow: 1px 1px 1px #ffffff7c;
+}
+.action_btns input{
+    background: rgb(195,195,195);
+    background: linear-gradient(0deg, rgba(195,195,195,1) 0%, rgba(228,228,228,1) 100%);
 }
 .action_btns label{
     max-width: 120px;
 }
 .action_btns button:hover{
-    box-shadow: 3px 3px 5px #855200c5;
+    box-shadow: inset 0 0 12px 0 rgb(225 225 225 / 71%);
 }
-.action_btns button.processing, .action_btns button:active, #request.success, #debug.success, #power.pwron, .statebtns.active, #wifistate.green{
-    background-color: rgb(88, 196, 0);
+.action_btns button.processing, .action_btns button:active, #request.success, #debug.success, #power.pwron, .statebtns.active, #wifistate.green, #motorpush.green{
+    background: rgb(88,196,0);
+    background: linear-gradient(0deg, rgba(88,196,0,1) 0%, rgba(152,211,105,1) 100%);
 }
 .action_btns button.open, #request.processing, .statebtns.processing, #wifistate.processing, #wifistate.yellow{
     background-color: rgb(225, 165, 0);
+    background: linear-gradient(0deg, rgba(255,165,0,1) 0%, rgba(255,183,51,1) 100%);
 }
 .action_btns button.error, #request.error, #wifistate.error, #wifistate.red{
     background-color: rgb(255, 82, 82);
+    background: linear-gradient(0deg, rgba(255,82,82,1) 0%, rgba(255,111,111,1) 100%);
 }
 
 .action_btns.disabled button, .action_btns button.pwroff, #wifistate.gray{
@@ -103,46 +115,64 @@ body{
 
 
 
-.profileconfig_dialog{
+.config_box{
     width: calc(80% - 140px);
     background-color: #383838;
     padding: 0px 50px;
     margin: 4px calc(10% + 10px);
     border-bottom-left-radius: 23px;
     border-bottom-right-radius: 23px;
-    height: 0%;
+    height: 0px;
     transition: height 0.5s padding 0.5s;
     display: block;
-    position: absolute;
     overflow: hidden;
 }
-
-.profileconfig_dialog .profilegroup{
+.config_box .profilegroup{
     font-size: 1em;
     width: 100%;
     margin: 0 0 5px 0;
 }
-.profileconfig_dialog .profilegroup input, .profileconfig_dialog .profilegroup select{
+.config_box .profilegroup input, .config_box .profilegroup select{
     width: 100%;
     margin: 0;
     background-color: #fff;
 }
-.profileconfig_dialog .profilegroup label{
-    max-width: 300px;
+.config_box .profilegroup input[type="radio"], .config_box .profilegroup input[type="checkbox"]{
+    height: 20px;
+    width: 29px;
+    box-shadow: none;
+}
+.config_box .profilegroup .statebtns{
     margin: 0;
 }
-.profileconfig_dialog.open{
+.config_box .profilegroup label{
+    max-width: 300px;
+    margin: 0;
+    overflow: hidden;
+    text-wrap-mode: nowrap;
+}
+.config_box.open{
     height: auto;
     padding: 35px 50px;
 }
-.profileconfig_dialog button{
+.config_box button{
     width: 100%;
     margin: 18px 0 0 0;
     /* display: inline-block; */
     font-size: 1em;
 }
+.statebtns.btn_small{
+    font-size: 0.5em;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.statebtns.btn_mid{
+    font-size: 0.7em;
+    font-weight: 600;
+    text-transform: uppercase;
+}
 
-#profile_message{
+#profile_message, #config_message{
     color: #000;
     width: 100%;
     padding: 3px 6px;
