--- a/browser_sdk/style.css
+++ b/browser_sdk/style.css
@@ -15,6 +15,10 @@ body{
     margin-bottom: 7px;
     padding: 5px 16px;
 }
+.action_btns, .changelog{
+    max-width: 1000px;
+    margin: 0 auto;
+}
 .action_btns button, .action_btns label, .action_btns input, .action_btns span, .action_btns select{
     font-size: 38px;
     padding: 13px;
@@ -180,11 +184,11 @@ body{
     background: #fff;
     display: block;
 }
-
 .changelog{
     font-size: 0.8em;
     color: #999;
     padding:100px 100px 20px;
+    width: 640px;
 }
 
 @media only screen and (max-width:670px) {
